Autoformat java files in test/com/facebook/buck/util.
Test Plan: CI

Reviewed By: mzlee

fbshipit-source-id: 86988de