@@ -27,29 +27,24 @@ import com.facebook.buck.testutil.integration.TemporaryPaths;
 import com.facebook.buck.zip.CustomJarOutputStream;
 import com.facebook.buck.zip.ZipOutputStreams;
 import com.google.common.collect.ImmutableList;
-
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.rules.ExpectedException;
-
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.NoSuchFileException;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import org.junit.Rule;
+import org.junit.Test;
+import org.junit.rules.ExpectedException;
 
 public class StackedFileHashCacheTest {
 
   private static final String SOME_FILE_INSIDE_JAR = "SomeClass.class";
-  @Rule
-  public TemporaryPaths tmp = new TemporaryPaths();
+  @Rule public TemporaryPaths tmp = new TemporaryPaths();
 
-  @Rule
-  public TemporaryPaths tmp2 = new TemporaryPaths();
+  @Rule public TemporaryPaths tmp2 = new TemporaryPaths();
 
-  @Rule
-  public ExpectedException expectedException = ExpectedException.none();
+  @Rule public ExpectedException expectedException = ExpectedException.none();
 
   @Test
   public void usesFirstCacheAbsolutePath() throws IOException {
@@ -126,10 +121,7 @@ public class StackedFileHashCacheTest {
     filesystem2.touch(path);
 
     StackedFileHashCache cache =
-        new StackedFileHashCache(
-            ImmutableList.of(
-                innerCache,
-                innerCache2));
+        new StackedFileHashCache(ImmutableList.of(innerCache, innerCache2));
     cache.get(fullPath);
     assertTrue(innerCache2.willGet(path));
   }
@@ -146,10 +138,7 @@ public class StackedFileHashCacheTest {
     filesystem2.touch(path);
 
     StackedFileHashCache cache =
-        new StackedFileHashCache(
-            ImmutableList.of(
-                innerCache,
-                innerCache2));
+        new StackedFileHashCache(ImmutableList.of(innerCache, innerCache2));
     cache.get(filesystem2, path);
     assertTrue(innerCache2.willGet(path));
   }
@@ -172,10 +161,7 @@ public class StackedFileHashCacheTest {
     ArchiveMemberPath fullArchiveMemberPath =
         archiveMemberPath.withArchivePath(filesystem2.resolve(archiveMemberPath.getArchivePath()));
     StackedFileHashCache cache =
-        new StackedFileHashCache(
-            ImmutableList.of(
-                innerCache,
-                innerCache2));
+        new StackedFileHashCache(ImmutableList.of(innerCache, innerCache2));
     cache.get(fullArchiveMemberPath);
     assertTrue(innerCache2.willGet(archiveMemberPath));
   }
@@ -194,10 +180,7 @@ public class StackedFileHashCacheTest {
     ArchiveMemberPath archiveMemberPath =
         ArchiveMemberPath.of(path, Paths.get(SOME_FILE_INSIDE_JAR));
     StackedFileHashCache cache =
-        new StackedFileHashCache(
-            ImmutableList.of(
-                innerCache,
-                innerCache2));
+        new StackedFileHashCache(ImmutableList.of(innerCache, innerCache2));
     cache.get(filesystem2, archiveMemberPath);
     assertTrue(innerCache2.willGet(archiveMemberPath));
   }
@@ -227,9 +210,8 @@ public class StackedFileHashCacheTest {
     Path fullPath = Paths.get("world.jar");
     ProjectFilesystem filesystem = new ProjectFilesystem(tmp.getRoot());
     writeJarWithHashes(filesystem, filesystem.resolve(fullPath));
-    ArchiveMemberPath archiveMemberPath = ArchiveMemberPath.of(
-        filesystem.resolve(fullPath),
-        Paths.get("Nonexistent.class"));
+    ArchiveMemberPath archiveMemberPath =
+        ArchiveMemberPath.of(filesystem.resolve(fullPath), Paths.get("Nonexistent.class"));
     ProjectFileHashCache innerCache = DefaultFileHashCache.createDefaultFileHashCache(filesystem);
     StackedFileHashCache cache = new StackedFileHashCache(ImmutableList.of(innerCache));
     expectedException.expect(NoSuchFileException.class);
@@ -251,9 +233,7 @@ public class StackedFileHashCacheTest {
 
   @Test
   public void skipsFirstCacheBecauseIgnoredAbsolutePath() throws IOException {
-    Config config = ConfigBuilder.createFromText(
-        "[project]",
-        "ignore = world.txt");
+    Config config = ConfigBuilder.createFromText("[project]", "ignore = world.txt");
     Path path = Paths.get("world.txt");
     Path fullPath = tmp.getRoot().resolve(path);
     ProjectFilesystem filesystem = new ProjectFilesystem(tmp.getRoot(), config);
@@ -266,9 +246,7 @@ public class StackedFileHashCacheTest {
 
   @Test
   public void skipsFirstCacheBecauseIgnored() throws IOException {
-    Config config = ConfigBuilder.createFromText(
-        "[project]",
-        "ignore = world.txt");
+    Config config = ConfigBuilder.createFromText("[project]", "ignore = world.txt");
     ProjectFilesystem filesystem = new ProjectFilesystem(tmp.getRoot(), config);
     Path path = filesystem.getPath("world.txt");
     filesystem.touch(path);
@@ -280,15 +258,12 @@ public class StackedFileHashCacheTest {
 
   @Test
   public void skipsFirstCacheBecauseIgnoredForArchiveMemberPathAbsolutePath() throws IOException {
-    Config config = ConfigBuilder.createFromText(
-        "[project]",
-        "ignore = world.jar");
+    Config config = ConfigBuilder.createFromText("[project]", "ignore = world.jar");
     Path fullPath = Paths.get("world.jar");
     ProjectFilesystem filesystem = new ProjectFilesystem(tmp.getRoot(), config);
     writeJarWithHashes(filesystem, filesystem.resolve(fullPath));
-    ArchiveMemberPath archiveMemberPath = ArchiveMemberPath.of(
-        filesystem.resolve(fullPath),
-        Paths.get("Nonexistent.class"));
+    ArchiveMemberPath archiveMemberPath =
+        ArchiveMemberPath.of(filesystem.resolve(fullPath), Paths.get("Nonexistent.class"));
     ProjectFileHashCache innerCache = DefaultFileHashCache.createDefaultFileHashCache(filesystem);
     StackedFileHashCache cache = new StackedFileHashCache(ImmutableList.of(innerCache));
     expectedException.expect(NoSuchFileException.class);
@@ -297,9 +272,7 @@ public class StackedFileHashCacheTest {
 
   @Test
   public void skipsFirstCacheBecauseIgnoredForArchiveMemberPath() throws IOException {
-    Config config = ConfigBuilder.createFromText(
-        "[project]",
-        "ignore = world.jar");
+    Config config = ConfigBuilder.createFromText("[project]", "ignore = world.jar");
     ProjectFilesystem filesystem = new ProjectFilesystem(tmp.getRoot(), config);
     Path path = filesystem.getPath("world.jar");
     writeJarWithHashes(filesystem, path);
@@ -312,13 +285,12 @@ public class StackedFileHashCacheTest {
   }
 
   private void writeJarWithHashes(ProjectFilesystem filesystem, Path path) throws IOException {
-    try (CustomJarOutputStream jar = ZipOutputStreams.newJarOutputStream(
-        filesystem.newFileOutputStream(path))) {
+    try (CustomJarOutputStream jar =
+        ZipOutputStreams.newJarOutputStream(filesystem.newFileOutputStream(path))) {
       jar.setEntryHashingEnabled(true);
-      jar
-          .writeEntry(
-              SOME_FILE_INSIDE_JAR,
-              new ByteArrayInputStream("fake contents".getBytes(StandardCharsets.UTF_8)));
+      jar.writeEntry(
+          SOME_FILE_INSIDE_JAR,
+          new ByteArrayInputStream("fake contents".getBytes(StandardCharsets.UTF_8)));
     }
   }
 }
